# StoryForge

./: .gitignore  LICENSE  README.md  biome.json  components.json  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml  update_latest_tag.yml  version_check.yml
src/: App.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  zustand.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  modules.rs
src-tauri/src/modules/: auth.rs  download.rs  errors.rs  installations.rs  mods.rs  news.rs  saves.rs  servers.rs  versions.rs
src/components/cards/: installation.card.tsx  server.card.tsx
src/components/comboboxes/: author.combobox.tsx
src/components/dialogs/: addinstallation.dialog.tsx  addmod.dialog.tsx  addserver.dialog.tsx  adduser.dialog.tsx  addversion.dialog.tsx  connectserver.dialog.tsx  deleteinstallation.dialog.tsx  deleteserver.dialog.tsx  deleteversion.dialog.tsx  editserver.dialog.tsx  (+4 more)
src/hooks/: use-add-mod-to-installation.ts  use-app-folder.ts  use-app-version.ts  use-connect-to-server.ts  use-download-version.ts  use-installed-mods.ts  use-installed-versions.ts  use-mod-configs.ts  use-mod-updates.ts  use-play-installation.ts  use-public-servers.ts  use-reveal-in-folder.ts  use-saves.ts  use-updater.ts  use-verify-auth.ts
src/lib/: queries.ts  types.ts  utils.ts
src/routes/: __root.tsx  index.tsx  installations.tsx  mods.tsx  news.tsx  public-servers.tsx  servers.tsx  versions.tsx
src/stores/: accounts.ts  dialogs.ts  installations.ts  modsFilters.ts  servers.ts  serversFilters.ts  settings.ts
(+35 files in other folders)
