[package]
name = "StoryForge"
version = "0.1.1"
description = "Launcher for Vintage Story"
authors = ["lovelesscodes"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "story_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
log = "0.4"
tauri-plugin-opener = "2.5.0"
tauri-plugin-zustand = "0.3"
tauri-plugin-window-state = "2.0.0"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.31", features = ["serialize"] }
which = "5"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
zip = "5.0.0"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
futures-util = "0.3"
zip-extensions = "0.8.3"
walkdir = "2"
dunce = "1"
tauri-plugin-process = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
